--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Acme-CPANAuthors-Japanese
 
-0.01 2007/12/26
+0.080522 2008/05/22
+  - YAPC::Asia 2008 update
+  - bumped up the version requirement of the dependencies
+
+0.071226 2007/12/26
   - initial release
