Import of ISHIGAKI/Acme-CPANAuthors-Japanese-0.090101 from CPAN.
gitpan-cpan-distribution: Acme-CPANAuthors-Japanese
gitpan-cpan-version:      0.090101
gitpan-cpan-path:         ISHIGAKI/Acme-CPANAuthors-Japanese-0.090101.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-CPANAuthors-Japanese
 
+0.090101 2009/01/01
+  - Happy new year 2009 update
+
 0.080522 2008/05/22
   - YAPC::Asia 2008 update
   - bumped up the version requirement of the dependencies
