Import of ISHIGAKI/Acme-CPANAuthors-Japanese-0.090911 from CPAN.
gitpan-cpan-distribution: Acme-CPANAuthors-Japanese
gitpan-cpan-version:      0.090911
gitpan-cpan-path:         ISHIGAKI/Acme-CPANAuthors-Japanese-0.090911.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-CPANAuthors-Japanese
 
+0.090911 2009/09/11
+  - YAPC::Asia 2009 update
+
 0.090101 2009/01/01
   - Happy new year 2009 update
 
